...
    var body: some View {
        NavigationStack(path: $navigationPath) {
            ZStack {
                mainContent
                errorBanner
            }
            .navigationTitle("Characters")
            .navigationBarTitleDisplayMode(.large)
            .navigationDestination(for: Character.self) { character in
                CharacterDetailView(
                    character: character,
                    appFactory: appFactory,
                    preloadedImage: nil
...
